# crossterm-kmp

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish.yaml
crossterm-ffi/: Cargo.toml  build.rs  uniffi.toml
crossterm-ffi/src/: crossterm.udl  lib.rs
example/src/commonMain/kotlin/: main.kt
gradle/: libs.versions.toml
lib/: build.gradle.kts
lib/src/commonTest/kotlin/crossterm/: CrosstermTest.kt
samples/input/: build.gradle.kts
samples/mosaic/: build.gradle.kts
samples/mosaic/src/commonMain/kotlin/: main.kt
